--- a/ServiceJournalEntryApDll/ServiceJournalEntryApDll.csproj
+++ b/ServiceJournalEntryApDll/ServiceJournalEntryApDll.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +12,10 @@
     <Reference Include="SAPBusinessOneSDK">
       <HintPath>D:\Users\nkurdadze\Desktop\DLL\SAPBusinessOneSDK.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
